<resources>
    <string name="app_name">Realmurdu</string>
    <string name="app_sub_title">Into the realm of urdu</string>

    <string name="hello_world">Hello world!</string>

    <string name="question_skipped">Question Skipped!</string>
    <string name="language_changed_successfully">Language Changed Successfully!</string>
    <string name="score_reseted">Score reseted Successfully!</string>


    <string name="home_option_play">Begin Journey</string>
    <string name="home_option_scoreboard">Scoreboard</string>
    <string name="home_option_settings">Settings</string>
    <string name="home_option_feedback">Feedback</string>

    <string name="available_games_title">Available Games</string>
    <string name="available_games_option_1">Identify correct alphabet</string>
    <string name="available_games_option_2">Identify correct object</string>
    <string name="available_games_option_3">Match the alphabet</string>

    <string name="game_1_title">Identify the Object</string>
    <string name="game_2_title">Identify the Alphabet</string>
    <string name="game_3_title">Match the alphabet and correct object</string>

    <string name="game_1_instruction">Identify the alphabet</string>
    <string name="game_2_instruction">Identify the object</string>

    <string name="game_answer_select_option">Select an option</string>
    <string name="game_answer_correct">Correct Answer</string>
    <string name="game_answer_wrong">Incorrect Answer</string>

    <string name="settings_title">Settings</string>
    <string name="settings_option_language">Change Language</string>
    <string name="settings_option_scoreboard">Reset Scoreboard</string>
    <string name="settings_language_title">Please select your language.</string>
    <string name="language_urdu">Urdu</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_espanol">Español</string>

    <string name="scoreboard_title">Scoreboard</string>
    <string name="scoreboard_label_game">Game</string>
    <string name="scoreboard_label_tries">Tries</string>
    <string name="scoreboard_label_score">Score</string>

    <string name="feedback_title">Feedback</string>
    <string name="feedback_label_instructions">Write your comments here</string>
    <string name="title_activity_available_games">Available Games Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game1">Game 1</string>
    <string name="title_activity_game2">Game 2</string>
    <string name="title_activity_scoreboard">Scoreboard</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_language">Language</string>

    <string name="button_submit">Submit</string>
    <string name="button_reset">Reset</string>
    <string name="title_activity_update_lang">UpdateLangActivity</string>
</resources>
