<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shawaiz.realmurdu.UpdateLangActivity"
    android:background="#009999"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >

        <TextView
            android:id="@+id/available_games_title"
            android:text="@string/title_activity_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:padding="20px"
            />

        <TextView
            android:id="@+id/language_title"
            android:text="@string/settings_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="9pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            />

        <TextView
            android:id="@+id/lang_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            android:tag="1"
            android:clickable="true"
            android:onClick="updateLanguage"
            />

        <TextView
            android:id="@+id/lang_urdu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_urdu"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            android:tag="2"
            android:clickable="true"
            android:onClick="updateLanguage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_french"
            android:id="@+id/lang_french"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            android:tag="3"
            android:clickable="true"
            android:onClick="updateLanguage"
            />

        <TextView
            android:id="@+id/lang_espanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_espanol"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            android:tag="4"
            android:clickable="true"
            android:onClick="updateLanguage"
            />

        <TextView
            android:id="@+id/lang_hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_hindi"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="20px"
            android:tag="5"
            android:clickable="true"
            android:onClick="updateLanguage"
            />

    </LinearLayout>



</RelativeLayout>
