<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shawaiz.realmurdu.FeedbackActivity"
    android:background="#009999">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >


        <TextView
            android:id="@+id/available_games_title"
            android:text="@string/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="20px">

            <EditText
                android:id="@+id/feedback_comments"
                android:layout_width="match_parent"
                android:layout_height="500px"
                android:inputType="textMultiLine"
                android:ems="10"
                android:background="#FFFFFF"
                android:hint="@string/feedback_label_instructions"
                android:gravity="center"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit"
                    android:id="@+id/button_submit"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".25"
                    android:onClick="sendFeedback"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_reset"
                    android:id="@+id/button_reset"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".25"
                    android:onClick="resetFeedback"
                    />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
