<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shawaiz.realmurdu.ScoreboardActivity"
    android:background="#009999"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >


        <TextView
            android:id="@+id/available_games_title"
            android:text="@string/scoreboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="#EEEEEE"
                >


                <TableRow android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="10px"
                    >

                    <TextView
                        android:id="@+id/available_games_option_1"
                        android:text="@string/scoreboard_label_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="7pt"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:layout_weight=".60"
                        android:layout_marginLeft="10px"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/scoreboard_label_spreator1"
                        android:text="@string/scoreboard_label_tries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="7pt"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight=".10"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/scoreboard_label_score"
                        android:text="@string/scoreboard_label_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="7pt"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:layout_weight=".10"
                        android:layout_marginRight="10px"
                        android:padding="20px"

                        />
                </TableRow>

                <TableRow android:layout_height="100dp">

                    <TextView
                        android:id="@+id/game_1_title"
                        android:text="@string/game_1_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:layout_weight=".60"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/game_1_tries"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight=".10"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/game_1_score"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_weight=".10"
                        android:layout_marginRight="10px"
                        android:padding="20px"

                        />
                </TableRow>

                <TableRow android:layout_height="100dp">

                    <TextView
                        android:id="@+id/game_2_title"
                        android:text="@string/game_2_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:layout_weight=".60"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/game_2_tries"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight=".10"
                        android:padding="20px"
                        />

                    <TextView
                        android:id="@+id/game_2_score"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="6pt"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_weight=".10"
                        android:layout_marginRight="10px"
                        android:padding="20px"
                        />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
