<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shawaiz.realmurdu.SettingsActivity"
    android:background="#009999">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >


        <TextView
            android:id="@+id/setting_title"
            android:text="@string/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"

            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="20px"
            android:onClick="callActivityLanguage"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_language"
                android:id="@+id/change_language"
                android:textColor="#FFFFFF"
                android:textSize="9pt"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight=".80"
                />

            <ImageView
                android:layout_width="85px"
                android:layout_height="85px"
                android:src="@drawable/icon_settings_feedback"
                android:layout_gravity="right"
                android:layout_weight=".20"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:onClick="callScoreboard"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_scoreboard"
                android:id="@+id/reset_score"
                android:textColor="#FFFFFF"
                android:textSize="9pt"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight=".80"
                />

            <ImageView
                android:layout_width="75px"
                android:layout_height="75px"
                android:src="@drawable/icon_settings_reset_score"
                android:layout_gravity="right"
                android:layout_weight=".20"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
