<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shawaiz.realmurdu.AvailableGamesActivity"
    android:background="#009999">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >


        <TextView
            android:id="@+id/available_games_title"
            android:text="@string/available_games_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50px" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                >

                <ImageView
                    android:id="@+id/option_settings"
                    android:src="@drawable/icon_game_2"
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:padding="50px"
                    android:layout_gravity="center_vertical"
                    android:onClick="callActivityGame1"
                    />

                <TextView
                    android:id="@+id/available_games_option_1"
                    android:text="@string/available_games_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="10pt"
                    android:onClick="callActivityGame1"
                    />

                <ImageView
                    android:id="@+id/option_feedback"
                    android:src="@drawable/icon_game_1"
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:padding="50px"
                    android:layout_gravity="center_vertical"
                    android:onClick="callActivityGame2"
                    />

                <TextView
                    android:id="@+id/available_games_option_2"
                    android:text="@string/available_games_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="10pt"
                    android:onClick="callActivityGame2"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
